objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proforma Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <formula>IF(
  TEXT(Status__c)=&apos;Overdue&apos;,
  TODAY() -  Due_Date__c,
  0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated based on today&apos;s date - due date, if the status is set to overdue.</inlineHelpText>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Pay__c</fullName>
        <formula>Payment_Date__c -  Invoice_Date__c</formula>
        <label>Days to Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>%Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_off__c</fullName>
        <label>Discount € off</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discounted_Amount__c</fullName>
        <formula>if( Discount__c&gt;0, (Invoice_Amount__c +  VAT_Amount__c ) * Discount__c ,Discount_off__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_link__c</fullName>
        <formula>if(  BEGINS(External_Id__c,&quot;in_&quot;) , 
 HYPERLINK(&quot;https://dashboard.stripe.com/invoices/&quot; &amp; External_Id__c,&quot;Open on stripe&quot;) 
 ,&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <summarizedField>Invoice_Line_Item__c.Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.Is_VAT_Item__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Notes__c</fullName>
        <inlineHelpText>set any other text to be printed in the invoice</inlineHelpText>
        <label>Invoice Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proforma Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_number__c</fullName>
        <label>PO number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_method__c</fullName>
        <label>Payment method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit card</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pro_Forma1__c</fullName>
        <defaultValue>&quot;Pro-Forma&quot;</defaultValue>
        <label>Invoice Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Forma__c</fullName>
        <formula>&quot;Pro-Forma&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro-Forma</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Amount_Euros__c</fullName>
        <inlineHelpText>This is the amount that has been received into the bank account.</inlineHelpText>
        <label>Received Amount (Euros)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending Payment</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_total__c</fullName>
        <formula>Invoice_Amount__c +  VAT_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Sub_total__c -  Discounted_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <summarizedField>Invoice_Line_Item__c.Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.Is_VAT_Item__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Invoice_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2019</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Overdue_and_Almost_Overdue_Invoices</fullName>
        <booleanFilter>(1 AND 2 AND 4) OR ((3 OR 5) AND 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Days_Overdue__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Invoice_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Days_Overdue__c</field>
            <operation>greaterThan</operation>
            <value>-10</value>
        </filters>
        <filters>
            <field>Days_Overdue__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Draft,Paid,Cancelled</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Overdue and Almost Overdue Invoices</label>
    </listViews>
    <listViews>
        <fullName>Unpaid_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>PO_number__c</columns>
        <columns>Status__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Overdue__c</columns>
        <columns>VAT_Amount__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Invoice_Notes__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Cancelled</value>
        </filters>
        <label>Unpaid Invoices</label>
    </listViews>
    <listViews>
        <fullName>Unpaid_Invoices1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Overdue</value>
        </filters>
        <label>Unpaid Invoices</label>
    </listViews>
    <listViews>
        <fullName>Unpaid_Invoices2</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Overdue__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>PO_number__c</columns>
        <columns>Status__c</columns>
        <columns>VAT_Amount__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Invoice_Notes__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Overdue</value>
        </filters>
        <label>Unpaid Invoices-Overdue</label>
    </listViews>
    <listViews>
        <fullName>Unpaid_Invoices3</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>PO_number__c</columns>
        <columns>Status__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Overdue__c</columns>
        <columns>VAT_Amount__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Invoice_Notes__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Cancelled</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Unpaid Invoices-Draft</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_ES_VAT_Number</fullName>
        <active>true</active>
        <description>IF the customer is from Spain, the VAT Number must start with ES.</description>
        <errorConditionFormula>AND( Account__r.BillingCountry = &apos;ES&apos;,NOT(BEGINS(Account__r.VAT_Number__c, &apos;ES&apos;)))</errorConditionFormula>
        <errorMessage>VAT Number must start with &apos;ES&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EU_VAT_Validation</fullName>
        <active>true</active>
        <description>VAT amount is mandatory, if the customer is from EU</description>
        <errorConditionFormula>AND( 
CONTAINS(&quot;AD:AM:AT:BY:BE:BA:BG:CH:CY:CZ:DE:DK:EE:ES:FO:FI:FR:GB:GI:GR:HU:HR:IE:IS:IT:LT:LU:LV:MC:MT:NO:NL:PO:PT:RO:RU:SE:SI:SK:SM:FR:VA&quot;, Account__r.BillingCountry),
ISBLANK(Account__r.VAT_Number__c ))</errorConditionFormula>
        <errorMessage>VAT amount is mandatory, if the customer is from EU</errorMessage>
    </validationRules>
</CustomObject>